--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,58 @@
+arrow==1.3.0
 asgiref==3.7.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
-contourpy==1.1.0
-cycler==0.11.0
-dj-database-url==2.0.0
-Django==4.2.2
-fonttools==4.40.0
-gunicorn==20.1.0
-importlib-resources==5.12.0
-kiwisolver==1.4.4
-matplotlib==3.7.1
-numpy==1.24.3
-packaging==23.1
-pandas==2.0.2
-Pillow==9.5.0
-psycopg2-binary==2.9.6
-pyparsing==3.1.0
+backports.zoneinfo==0.2.1
+binaryornot==0.4.4
+blinker==1.7.0
+certifi==2023.11.17
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.1.1
+cookiecutter==2.5.0
+cycler==0.12.1
+distlib==0.3.8
+dj-database-url==2.1.0
+Django==4.2.5
+django-browser-reload==1.12.1
+django-tailwind==3.4.0
+filelock==3.13.1
+Flask==3.0.0
+fonttools==4.46.0
+gunicorn==21.2.0
+idna==3.6
+importlib-metadata==6.8.0
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.4
+mdurl==0.1.2
+numpy==1.24.4
+packaging==23.2
+pandas==2.0.3
+Pillow==10.1.0
+platformdirs==4.1.0
+psycopg2-binary==2.9.9
+pyarrow==14.0.1
+Pygments==2.17.2
+pylance==0.8.14
+pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2023.3
+python-slugify==8.0.1
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.0
 six==1.16.0
 sqlparse==0.4.4
-typing_extensions==4.6.3
+text-unidecode==1.3
+types-python-dateutil==2.8.19.14
+typing_extensions==4.8.0
 tzdata==2023.3
-whitenoise==6.5.0
-zipp==3.15.0
+urllib3==2.1.0
+virtualenv==20.25.0
+Werkzeug==3.0.1
+whitenoise==6.6.0
+zipp==3.17.0
