--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 arrow==1.3.0
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 binaryornot==0.4.4
 blinker==1.7.0
 certifi==2023.11.17
